# src/router/auth.js
@@ -5,8 +5,11 @@ const authController = require('../controllers/authController');
 // router.get('/')
 router.post('/register',authController.register);
 router.post('/login',authController.login);
+router.post('/forgot-password',authController.forgotPassword);
 
 
-
+//verify email
+router.post('/send-email',authController.sendEmail)
+router.post('/verify-email',authController.verifyEmail);
 
 module.exports = router;
